# LaTeXtify

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml  render.yaml  startup.bat  startup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  publish.yml  release.yml
deploy/hf-space/: DEPLOY.md  Dockerfile  README.md  warm_cache.py
deploy/render/: DEPLOY.md  Dockerfile
examples/: README.md
examples/01-all-embedded/: .gitignore  README.md  make_manuscript.py  run.py
examples/02-word-plus-figures/: .gitignore  README.md  make_manuscript.py  run.py
examples/03-multipart-refmanager/: .gitignore  README.md  make_manuscript.py  run.py
latextify/: __init__.py  __main__.py  cli.py  cli_batch.py  cli_clean.py  cli_equations.py  cli_export.py  cli_kit.py  cli_review.py
latextify/audit/: __init__.py  equations.py
latextify/citations/: __init__.py  authoryear_index.py  bib.py  bibmatch.py  bibtex_in.py  corrections.py  crossref.py  csl_json_in.py  endnote.py  endnote_xml_in.py  fields.py  mendeley.py  merge.py  nbib_in.py  plaintext.py  reconcile.py  reflist_nondocx.py  refs_import.py  validate.py  wordnative.py  zotero.py
latextify/compile/: __init__.py  logs.py  pdf.py  tectonic.py
latextify/emit/: __init__.py  alt_formats.py  alt_formats_render.py  anchors.py  metadata.py  project.py  submission.py
latextify/figures/: __init__.py  convert.py  crop.py  extract.py  override.py
latextify/gui/: __init__.py  demo.py  downloads.py  exporting.py  folder_picker.py  guard.py  lifecycle.py  schemas.py  server.py  upload_utils.py  uploads_routes.py  validation_view.py
latextify/gui/static/: alt-export.js  app.js  clean.js  export.js  index.html  lifecycle.js  results.js  review.js  style.css
latextify/ingest/: __init__.py  _xml.py  archive_guard.py  citation_sentinels.py  docx_clean.py  filters.py  formats.py  frontmatter.py  metadata_guess.py  metadata_guess_nondocx.py  pandoc.py  portable_anchors.py  preflight.py
latextify/kit/: README-OFFLINE.md  __init__.py  build.py  install_template.py
latextify/model/: __init__.py  _compat.py  body.py  compile.py  emit.py  equations.py  figure.py  meta.py  meta_sidecar.py  preflight.py  reconcile.py  refs.py  validate.py
latextify/report/: __init__.py  render.py
latextify/templates/: __init__.py  authors.py  loader.py
latextify/templates/journals/achemso/: manifest.yaml  metadata.tex.j2  preamble.tex.j2
latextify/templates/journals/aip-advances/: manifest.yaml
latextify/templates/journals/aip-apl/: manifest.yaml
latextify/templates/journals/aip-jap/: manifest.yaml
latextify/templates/journals/aps-prapplied/: manifest.yaml
latextify/templates/journals/aps-prl/: manifest.yaml
latextify/templates/journals/aps-prx/: manifest.yaml
latextify/templates/journals/aps-rmp/: manifest.yaml
latextify/templates/journals/elsarticle/: manifest.yaml  metadata.tex.j2  preamble.tex.j2
latextify/templates/journals/ieeetran/: manifest.yaml  metadata.tex.j2  preamble.tex.j2
latextify/templates/journals/iopart/: VENDOR_LICENSE.txt  manifest.yaml  metadata.tex.j2  preamble.tex.j2
latextify/templates/journals/revtex4-2/: manifest.yaml  metadata.tex.j2
latextify/templates/journals/sn-jnl/: VENDOR_LICENSE.txt  manifest.yaml  metadata.tex.j2  preamble.tex.j2
latextify/templates/journals/wiley/: manifest.yaml  metadata.tex.j2  preamble.tex.j2
plans/: FORMATS_AND_PRIVACY_PLAN.md  GUI_JOURNALS_EXPORT_PLAN.md  GUI_MULTIFILE_PLAN.md  GUI_OPTIONS_FORMATS_PLAN.md  LATEXTIFY_PLAN.md  MANUSCRIPT_FIDELITY_PLAN.md  OFFLINE_DISTRIBUTION_PLAN.md  OFFLINE_PORTABILITY_PLAN.md  SECURITY_RELIABILITY_AUDIT_PLAN.md
plans/archive/: GUI_JOURNALS_EXPORT_PLAN.md  LATEXTIFY_PLAN.md  OFFLINE_PORTABILITY_PLAN.md  SECURITY_RELIABILITY_AUDIT_PLAN.md
tests/: test_archive_guard.py  test_audit_equations.py  test_citation_sentinels.py  test_citations_bib.py  test_citations_bibmatch.py  test_citations_bibtex_in.py  test_citations_bracket_refs.py  test_citations_compile_stub.py  test_citations_corrections.py  test_citations_crossref.py  test_citations_csl_json_in.py  test_citations_degradation.py  test_citations_endnote.py  test_citations_endnote_compile.py  test_citations_endnote_xml_in.py  test_citations_extract.py  test_citations_extract_endnote.py  test_citations_extract_wordnative.py  test_citations_fields.py  test_citations_merge.py  test_citations_nbib_in.py  test_citations_parsers.py  test_citations_plaintext.py  test_citations_reconstruct.py  test_citations_refs_import.py  test_citations_stress.py  test_citations_validate.py  test_citations_wordnative.py  test_cli.py  test_cli_review.py  test_compat_strenum.py  test_compile_logs.py  test_compile_tectonic.py  test_docx_clean.py  test_emit.py  test_emit_submission.py  test_examples.py  test_export_formats.py  test_fidelity_captions_reflist.py  test_figures.py  (+26 more)
tests/fixtures/: README.md  bracket_cited.docx  clean.docx  cropped_figure.docx  endnote_cited.docx  equations.docx  figures.docx  hand_cited.docx  make_bracket_cited.py  make_clean.py  make_cropped_figure.py  make_endnote_cited.py  make_equations.py  make_figures.py  make_hand_cited.py  make_metadata_titlepage.py  make_supplement.py  make_tables.py  make_unsupported.py  make_wordnative_cited.py  make_zotero_cited.py  metadata_titlepage.docx  paper.yaml  supplement.docx  tables.docx  unsupported.docx  wordnative_cited.docx  zotero_cited.docx
tests/fixtures/golden/: achemso_metadata.tex  achemso_preamble.tex  elsarticle_metadata.tex  elsarticle_preamble_authoryear.tex  elsarticle_preamble_numeric.tex  ieeetran_metadata.tex  ieeetran_preamble.tex  iopart_metadata.tex  iopart_preamble.tex  revtex4-2_metadata.tex  revtex4-2_preamble.tex  sn-jnl_metadata.tex  sn-jnl_preamble.tex  sn-jnl_preamble_authoryear.tex  wiley_metadata.tex  wiley_preamble_authoryear.tex  wiley_preamble_numeric.tex
