[project]
name = "latextify"
version = "0.1.0"
description = "Convert Word manuscripts to journal-ready LaTeX projects and PDFs"
requires-python = ">=3.11"
dependencies = [
    "pypandoc-binary>=1.13",  # pandoc engine, bundled binary (no system install)
    "panflute>=2.3",          # pandoc AST filters in Python
    "lxml>=5.0",              # direct docx XML parsing (field codes, styles)
    "pyyaml>=6.0",            # paper.yaml sidecar, journal manifests, figures.yaml
    "jinja2>=3.1",            # journal preamble/metadata templates
    "httpx>=0.27",            # Crossref API client, Tectonic release download
    "rapidfuzz>=3.0",         # fuzzy matching for plain-text citation reconstruction
    "typer>=0.12",            # CLI
    "platformdirs>=4.0",      # cross-platform cache dir for the Tectonic binary
    "svglib>=1.5",            # SVG->PDF fallback converter (pure-Python, always works)
    "reportlab>=4.0",         # svglib's PDF rendering backend
]

[project.optional-dependencies]
# Preferred SVG->PDF converter (higher fidelity than svglib) -- ships native
# cairo bindings that frequently fail to load on Windows (missing libcairo-2
# GTK runtime DLLs); latextify.figures.convert catches that failure at
# runtime and falls back to svglib+reportlab, so cairosvg is optional rather
# than a hard dependency.
cairo = [
    "cairosvg>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "python-docx>=1.2.0",  # generate .docx test fixtures (fixture-only, not runtime)
    "ruff>=0.5",
    "cairosvg>=2.7",  # installed for dev/test so the primary SVG->PDF path is
                       # exercised too, not just the svglib fallback (item 15)
]

[project.scripts]
latextify = "latextify.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["latextify"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typer's Argument()/Option() calls as parameter defaults are the documented
# way to declare CLI options -- not the mutable-default footgun B008 flags.
"latextify/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "tectonic: requires a real Tectonic binary (PATH/cache/download) and network access",
    "network: hits a real network service (e.g. Crossref); skips gracefully offline",
]
