[project]
name = "latextify"
version = "0.1.0"
description = "Convert Word manuscripts to journal-ready LaTeX projects and PDFs"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Paige Quarterman" }]
keywords = ["latex", "docx", "word", "journal", "manuscript", "bibtex", "tectonic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
requires-python = ">=3.10"
dependencies = [
    "pypandoc-binary>=1.13",  # pandoc engine, bundled binary (no system install)
    "panflute>=2.3",          # pandoc AST filters in Python
    "lxml>=5.0",              # direct docx XML parsing (field codes, styles)
    "pyyaml>=6.0",            # paper.yaml sidecar, journal manifests, figures.yaml
    "jinja2>=3.1",            # journal preamble/metadata templates
    "httpx>=0.27",            # Crossref API client, Tectonic release download
    "rapidfuzz>=3.0",         # fuzzy matching for plain-text citation reconstruction
    "typer>=0.12",            # CLI
    "platformdirs>=4.0",      # cross-platform cache dir for the Tectonic binary
    "svglib>=1.5",            # SVG->PDF fallback converter (pure-Python, always works)
    "reportlab>=4.0",         # svglib's PDF rendering backend
    "pillow>=10.0",           # TIFF->PNG figure conversion (Word embeds TIFF constantly)
    "pypdf>=4.0",             # staple main + supplement PDFs (--combine-supplement); BSD, pure-Python
]

[project.optional-dependencies]
# Preferred SVG->PDF converter (higher fidelity than svglib) -- ships native
# cairo bindings that frequently fail to load on Windows (missing libcairo-2
# GTK runtime DLLs); latextify.figures.convert catches that failure at
# runtime and falls back to svglib+reportlab, so cairosvg is optional rather
# than a hard dependency.
cairo = [
    "cairosvg>=2.7",
]
# Local web GUI (plan item 19): `latextify gui`. Optional so the CLI-only
# install stays light; latextify.cli's `gui` command imports these lazily
# and prints an actionable install hint if they're missing.
gui = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",  # required by fastapi to parse multipart file uploads
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "python-docx>=1.2.0",  # generate .docx test fixtures (fixture-only, not runtime)
    "ruff>=0.5",
    "cairosvg>=2.7",  # installed for dev/test so the primary SVG->PDF path is
                       # exercised too, not just the svglib fallback (item 15)
    "fastapi>=0.115",  # gui extra, installed for dev/test so tests/test_gui.py runs (item 19)
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.urls]
Repository = "https://github.com/pquarterman17/LaTeXtify"
Issues = "https://github.com/pquarterman17/LaTeXtify/issues"

[project.scripts]
latextify = "latextify.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["latextify"]

# The examples/ scripts generate their .docx/.yaml/figures at runtime; those
# artifacts are gitignored per-directory, but hatchling's sdist walk does not
# honor nested .gitignore files, so exclude them explicitly. This keeps
# locally-generated (potentially private) manuscripts a contributor drops under
# examples/ out of any `uv build` source distribution.
[tool.hatch.build.targets.sdist]
exclude = [
    "examples/**/*.docx",
    "examples/**/*.yaml",
    "examples/**/figures/**",
    "examples/**/output/**",
    "build/",
    "dist/",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typer's Argument()/Option() calls as parameter defaults are the documented
# way to declare CLI options -- not the mutable-default footgun B008 flags.
"latextify/cli.py" = ["B008"]
"latextify/cli_batch.py" = ["B008"]
# Same pattern, FastAPI's side: File()/Form() calls as parameter defaults are
# the documented way to declare request-body fields.
"latextify/gui/server.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "tectonic: requires a real Tectonic binary (PATH/cache/download) and network access",
    "network: hits a real network service (e.g. Crossref); skips gracefully offline",
]
